config file coming along

--- a/config.json
+++ b/config.json
@@ -1,4 +1,1 @@
-{
-  "ITEM_COUNT": 4,
-  "BIODOME_COUNT": 3
-}
+{"ITEM_COUNT": 10, "BIODOME_COUNT": 1, "ITEM_BOX_SIZE": 3, "STARTING_INVENTORY": [1, 2, 3, 4]}
