too many changes to list
imports and testing modified according to deployment, lots of clean up, config file further extended and implemented...

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"ITEM_COUNT": 10, "BIODOME_COUNT": 1, "ITEM_BOX_SIZE": 3, "STARTING_INVENTORY": [1, 2, 3, 4]}
+{"BIODOME_COUNT": 1, "ITEM_COUNT": 10, "GRID_META_LIMIT": 2048, "HOME_COUNT_MAX": 6, "HOME_META_LIMIT": 2048, "ITEM_BOX_SIZE": 3, "STARTING_INVENTORY": [1, 2, 3, 4], "STARTING_KEY_COUNT": 3, "USER_META_LIMIT": 2048}
